--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div id="theme-3" class="theme-circle" onclick="setTheme('green')" ></div>
                     <div id="theme-4" class="theme-circle" onclick="setTheme('purple')" ></div>
                 </div>
-                <blockquote>Twenty years from now you will be more disappointed by the things that you didn’t do than by the ones you did do.</blockquote>
+                <blockquote><i>Twenty years from now you will be more disappointed by the things that you didn’t do than by the ones you did do. - Mark Twain</i></blockquote>
             </div>
     
             <div id="s1-right">
@@ -51,7 +51,7 @@
                             <div id="circle-1" class="circle"></div>
                             <div id="circle-2" class="circle"></div>
                             <h3>What I Do</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                            <p>Spend 10 hours everyday to work as a Full Stack Web Developer</p>
                             <div id="circle-3" class="circle"></div>
                             <div id="circle-4" class="circle"></div>
                         </div>
@@ -62,7 +62,12 @@
             <div id="s2-left">
                 <h3>More about Me</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem accusantium blanditiis obcaecati aspernatur sed, eveniet ea fugiat odit minima voluptatem consequuntur, exercitationem suscipit, rerum vitae! Facilis necessitatibus dolor voluptate maiores?
+                    I love observation and learning new things. Everyday I ask myself "How can I make changes to improve my life and others?" and focus on taking actions. I do believe that action is the biggest factor of a well-being life. Without action, knowledges, ideas and thoughts are useless, action coverts ideas into experiences; action creates realities of life, action is a way of learning.
+                <br/> <br/>I can speak English well and I have experiences working with foreigner customers, the outcome of our works should be beyond customer expectation and that how we achive our success for long run
+                <br/> <br/>Change is something we can't avoid, life is always changing, it is a constant, and that reminds me to keep learning and changing to be always a student throught out my life.
+
+                <br/><br/>
+                
                 </p>
                 <hr></hr>
                 <h3>TOP EXPERTISE</h3>
